# deku_experiments

./: Cargo.toml  README.md
codegen/generate-pci-ids/: Cargo.toml
codegen/generate-pci-ids/src/: main.rs
codegen/pci-ids-parser/: Cargo.toml
codegen/pci-ids-parser/src/: main.rs  parser.rs
examples/dekutest/: Cargo.toml
examples/dekutest/src/: main.rs
examples/dump-pci/: Cargo.toml
examples/dump-pci/src/: main.rs
examples/dump_info/: Cargo.toml
examples/dump_info/src/: main.rs
examples/kv/: Cargo.toml
examples/kv/src/: dma.rs  main.rs  nvme.rs  vfio.rs
examples/kv/src/nvme/: .controller.rs.swp  admin.rs  capabilities.rs  command.rs  controller.rs  mod.rs  version.rs
projects/nvme/: Cargo.toml
projects/nvme/src/: capabilities.rs  command.rs  lib.rs  version.rs
projects/pci/: Cargo.toml
projects/pci-ids/: Cargo.toml
projects/pci-ids/src/: lib.rs  main.rs  parser.rs  search.rs
projects/pci/src/: ids.rs  lib.rs
projects/vfio/: Cargo.toml
projects/vfio/src/: container.rs  lib.rs  utils.rs
projects/vfio/src/device/: device_info.rs  mod.rs  region_info.rs
projects/vfio/src/group/: mod.rs  status.rs
