[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
deku = "0.18"
libc = "0.2"

[dependencies.nvme]
version = "0.1.0"
path = "../../projects/nvme"

[dependencies.vfio]
version = "0.1.0"
path = "../../projects/vfio"

[dependencies.pci]
version = "0.1.0"
path = "../../projects/pci"
